mrds 2.1.13
-----------

  * link to distance sampling Google Groups in help
  * duplicate non-convergence warning/error removed

mrds 2.1.12
-----------

  * \donttest{} examples are now \dontrun{}.

mrds 2.1.11
-----------

  * Bug in unif+cos(1) models when using monotonicity constraints and randomised starting points. Since the model only has 1 parameter, there is a bug in selecting columns in Rsolnp starting value code that makes the result be a vector, which then doesn't work with an apply later. Workaround of not using randomised starting values in mrds for that model. Thanks to Nathalie Cavada for finding this bug.

  * Fixed bug in pdot.dsr.integrate.logistic which was giving incorrect AIC values for FI models with binned data for points or lines.

  * Fixed issue where returned optimisation obejct got accessed without being checked to see if it's result was an error, causing problems when encapsulating ddf in other functions.


mrds 2.1.10
-----------

  * added testing directory to .Rbuildignore, tests are now not included in built packages and are not run on CRAN. For tests use the source packages on github.


mrds 2.1.9
----------

BUG FIXES
  * removed test that failed on CRAN's testing

mrds 2.1.8
----------

CHANGES
  * removed doeachint/cgftab code, which used a spline approximation to the effective strip width/effective area when a half-normal detection function was used. This has been replaced with exact calculation via the error function (erf).
  * tests updated accordingly
  * monotonically constrained models now use a bunch of random start points -- uses gosolnp() from Rsolnp
  * re-fitting by jiggling parameters refined to multiply by a uniform variable with limits set as the upper and lower bounds (+/-1) so jiggling can go either way, on approximately the same scale as the parameters