@@ -113,8 +113,8 @@ plot.ds <- function(x, which=2, byvar="", breaks=NULL, nc=NULL,
     range.varies <- FALSE
   }
 
-  if(range.varies&showpoints){
-    errors("Point values can be misleading for g(x) when the range varies")
+  if(range.varies & showpoints){
+    warning("Point values can be misleading for g(x) when the range varies")
   }
 
   if(!is.null(substitute(subset))){
@@ -124,8 +124,7 @@ plot.ds <- function(x, which=2, byvar="", breaks=NULL, nc=NULL,
   }
 
   if(all(!selected)){
-    errors("Specified subset is empty.")
-    return()
+    stop("Specified subset is empty.")
   }
 
   if(is.matrix(int.range)){
