@@ -3,6 +3,8 @@ mrds 2.1.13
 
   * link to distance sampling Google Groups in help
   * duplicate non-convergence warning/error removed
+  * warning of singular Hessian is now a warning()
+  * re-wrote the debug output to be easier to read
 
 mrds 2.1.12
 -----------
